--- a/scss/style.css
+++ b/scss/style.css
@@ -1,1 +1,16 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.c-hero {
+  background: -webkit-gradient(linear, left bottom, right top, from(#396afc), to(#2948ff));
+  background: linear-gradient(to top right, #396afc, #2948ff);
+  min-height: 350px;
+}
+/*# sourceMappingURL=style.css.map */
