Added basic budget component styles

--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,4 +1,8 @@
 .c-hero {
-    background: linear-gradient(to top right, #396afc, #2948ff);
-    min-height: 350px;
+    // background: linear-gradient(to top right, #00c6ff, #0072ff);
+    background: #0575E6;
+    min-height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
