--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
 }
 
 body {
@@ -7,4 +8,9 @@ body {
     padding: 0;
 }
 
-@import './components/hero'
+// ? Components
+@import './components/hero';
+@import './components/budget';
+
+// ? Utilities
+@import './utils/wrapper';
