--- a/scss/components/_controllers.scss
+++ b/scss/components/_controllers.scss
@@ -22,6 +22,11 @@
         &:focus {
             border-color: $color__income;
         }
+        &--expense {
+            &:focus {
+                border-color: $color__expense;
+            }
+        }
     }
 
     &__type {
@@ -59,6 +64,17 @@
             transform: translateY(3px);
             background: darken($color__income, 5%);
             border-bottom: 3px solid darken($color__income, 10%);
+        }
+        
+        &--expense {
+            background: $color__expense;
+            border-bottom: 3px solid darken($color__expense, 5%);
+            
+            &:active {
+                background: darken($color__expense, 5%);
+                border-bottom: 3px solid darken($color__expense, 10%);
+
+            }
         }
     }
 }
