--- a/scss/style.css
+++ b/scss/style.css
@@ -146,6 +146,10 @@ body {
   border-color: #4caf50;
 }
 
+.c-controllers__type--expense:focus, .c-controllers__description--expense:focus, .c-controllers__amount--expense:focus {
+  border-color: #fb8c00;
+}
+
 .c-controllers__type {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
@@ -200,6 +204,16 @@ body {
           transform: translateY(3px);
   background: #449d48;
   border-bottom: 3px solid #3d8b40;
+}
+
+.c-controllers__add--expense {
+  background: #fb8c00;
+  border-bottom: 3px solid #e27e00;
+}
+
+.c-controllers__add--expense:active {
+  background: #e27e00;
+  border-bottom: 3px solid #c87000;
 }
 
 .c-main {
